get positions list swagger json
